crates/core-macros/tests/compile/fail/describe_params_enum.rs
use actrpc_core::DescribeParams;
use serde::{Deserialize, Serialize};

#[derive(Debug, Clone, PartialEq, Serialize, Deserialize, DescribeParams)]
enum Params {
    A(String),
    B(i32),
}

fn main() {}
